tests/baselines/reference/exportImportAlias.errors.txt
exportImportAlias.ts(3,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
exportImportAlias.ts(9,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
exportImportAlias.ts(16,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
exportImportAlias.ts(25,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
exportImportAlias.ts(30,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
exportImportAlias.ts(37,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
exportImportAlias.ts(46,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
exportImportAlias.ts(51,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
exportImportAlias.ts(60,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== exportImportAlias.ts (9 errors) ====
    // expect no errors here
    
    module A {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
        export var x = 'hello world'
        export class Point {
            constructor(public x: number, public y: number) { }
        }
        export module B {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export interface Id {
                name: string;
            }
        }
    }
    
    module C {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export import a = A;
    }
    
    var a: string = C.a.x;
    var b: { x: number; y: number; } = new C.a.Point(0, 0);
    var c: { name: string };
    var c: C.a.B.Id;
    
    module X {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export function Y() {
            return 42;
        }
    
        export module Y {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export class Point {
                constructor(public x: number, public y: number) { }
            }
        }
    }
    
    module Z {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
        // 'y' should be a fundule here
        export import y = X.Y;
    }
    
    var m: number = Z.y();
    var n: { x: number; y: number; } = new Z.y.Point(0, 0);
    
    module K {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class L {
            constructor(public name: string) { }
        }
    
        export module L {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export var y = 12;
            export interface Point {
                x: number;
                y: number;
            }
        }
    }
    
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export import D = K.L;
    }
    
    var o: { name: string };
    var o = new M.D('Hello');
    
    var p: { x: number; y: number; }
    var p: M.D.Point;